# BookCrudHaskell

./: BookCRDHsk.cabal  CHANGELOG.md  Dockerfile
app/: Book.hs  Bookdb.hs  Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
