cabal-version:      2.4
name:               BookCRDHsk
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             trofimovep
maintainer:         trofimovep42@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable BookCRDHsk
    main-is:          Main.hs
    other-modules: Book, Bookdb
    build-depends:
        base ^>=4.14.3.0,
        scotty >= 0.12,
        wai-extra >= 3.1.12,
        wai >= 3.2.3,
        wai-cors >= 0.2.7,
        aeson >= 2.1.0.0,
        postgresql-simple >= 0.6.4
    hs-source-dirs:   app
    default-language: Haskell2010
